--- a/public/Services/services.css
+++ b/public/Services/services.css
@@ -1,133 +1,104 @@
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  box-sizing: border-box;
-}
-body .headerB {
-  z-index: 999;
-}
-body .headerB ul {
-  list-style-type: none;
-  text-decoration: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: 13px;
-}
-body .headerB ul a {
-  color: black;
-}
-body .headerB ul a:hover {
-  color: #ed1c24;
-  text-decoration: none;
-}
-body .headerB li {
-  list-style-type: none;
-  padding: 10px 15px;
-}
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  box-sizing: border-box; }
+  body .headerB {
+    z-index: 999; }
+    body .headerB ul {
+      list-style-type: none;
+      text-decoration: none;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      font-size: 13px; }
+      body .headerB ul a {
+        color: black; }
+      body .headerB ul a:hover {
+        color: #ed1c24;
+        text-decoration: none; }
+    body .headerB li {
+      list-style-type: none;
+      padding: 10px 15px; }
 
 #imgInHL {
   padding: 0 15px;
   width: 100px;
-  height: auto;
-}
+  height: auto; }
 
 #LInH {
   background-color: #ed1c24;
   color: white !important;
-  padding: 10px;
-}
+  padding: 10px; }
 
 #LInH:hover {
-  color: black !important;
-}
+  color: black !important; }
 
 .iconsMes {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
-}
-.iconsMes i {
-  font-size: 24px;
-  padding: 0 10px;
-}
-.iconsMes a {
-  color: black;
-}
-.iconsMes a:hover {
-  color: #979797;
-}
+  margin-top: 100px; }
+  .iconsMes i {
+    font-size: 24px;
+    padding: 0 10px; }
+  .iconsMes a {
+    color: black; }
+  .iconsMes a:hover {
+    color: #979797; }
 
 .listF ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  font-size: 13px;
-}
-.listF ul li {
-  padding: 25px 25px;
-}
-.listF ul a {
-  color: black;
-}
-.listF ul a:hover {
-  color: #ed1c24;
-}
+  font-size: 13px; }
+  .listF ul li {
+    padding: 25px 25px; }
+  .listF ul a {
+    color: black; }
+  .listF ul a:hover {
+    color: #ed1c24; }
 
 #FotL {
   padding-right: 85px;
-  color: #bbbbbb;
-}
+  color: #bbbbbb; }
 
 #FotR {
-  padding-left: 85px;
-}
-#FotR li {
-  display: flex;
-  flex-direction: column;
-  color: #bbbbbb;
-  text-align: center;
-}
+  padding-left: 85px; }
+  #FotR li {
+    display: flex;
+    flex-direction: column;
+    color: #bbbbbb;
+    text-align: center; }
 
 .infBlock {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 .artO {
   text-align: center;
   display: flex;
   flex-direction: column;
-  padding: 70px 0;
-}
-.artO h3 {
-  color: white;
-}
-.artO p {
-  color: #979797;
-  font-style: italic;
-}
+  padding: 70px 0; }
+  .artO h3 {
+    color: white; }
+  .artO p {
+    color: #979797;
+    font-style: italic; }
 
 .artO h3::before {
-  content: url(../img/icon.png);
-}
+  content: url(../img/icon.png); }
 
 .algN {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 nav {
   text-align: center;
-  padding: 100px 0;
-}
-nav p {
-  color: #979797;
-  text-align: center;
-}
-nav h1 {
-  text-align: center;
-}
+  padding: 100px 0; }
+  nav p {
+    color: #979797;
+    text-align: center; }
+  nav h1 {
+    text-align: center; }
 
 .butInNav {
   color: white;
@@ -136,77 +107,63 @@ nav h1 {
   align-items: center;
   margin: 100px 100px;
   max-width: 300px !important;
-  cursor: pointer;
-}
-.butInNav p {
-  padding: 13px 20px;
-  margin: 0;
-  color: black !important;
-}
+  cursor: pointer; }
+  .butInNav p {
+    padding: 13px 20px;
+    margin: 0;
+    color: black !important; }
 
 .butPos {
   display: flex;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .creatS {
   max-width: 100%;
   height: 700px;
-  background-color: #363636;
-}
+  background-color: #363636; }
 
 .creatInf {
   color: lightgray;
   text-align: left;
   padding: 50px 0;
-  height: auto;
-}
-.creatInf p {
-  color: #979797;
-  padding-left: 50px;
-}
+  height: auto; }
+  .creatInf p {
+    color: #979797;
+    padding-left: 50px; }
 
 .firstB {
   height: 100px !important;
   display: flex;
-  justify-content: space-around;
-}
-.firstB a {
-  height: 100px !important;
-  display: flex;
-  justify-content: space-around;
-}
-.firstB div {
-  border-radius: 10px;
-}
-.firstB div p {
-  color: lightgray;
-  text-align: center;
-  margin-top: 35px;
-  font-size: 15px;
-}
+  justify-content: space-around; }
+  .firstB a {
+    height: 100px !important;
+    display: flex;
+    justify-content: space-around; }
+  .firstB div {
+    border-radius: 10px; }
+    .firstB div p {
+      color: lightgray;
+      text-align: center;
+      margin-top: 35px;
+      font-size: 15px; }
 
 .creatF {
   background-color: #222222;
   width: 100% !important;
-  height: auto;
-}
+  height: auto; }
 
 .oneB {
   display: flex;
-  justify-content: space-around;
-}
-.oneB div {
-  margin: 10px 47px;
-  text-align: center;
-  border: 2px solid #242424;
-  border-radius: 10px;
-  padding: 15px 0;
-}
-.oneB div p {
-  color: #555555;
-}
+  justify-content: space-around; }
+  .oneB div {
+    margin: 10px 47px;
+    text-align: center;
+    border: 2px solid #242424;
+    border-radius: 10px;
+    padding: 15px 0; }
+    .oneB div p {
+      color: #555555; }
 
 .twoS {
   padding: 25px 300px;
@@ -214,54 +171,45 @@ nav h1 {
   font-size: 23px;
   position: relative;
   top: 200px;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .twoB {
   color: black;
-  background-color: white;
-}
-.twoB p {
-  margin-top: 15px;
-}
+  background-color: white; }
+  .twoB p {
+    margin-top: 15px; }
 
 .seoW {
   background-color: #242424;
   width: 100%;
-  height: auto !important;
-}
+  height: auto !important; }
 
 .seoInf {
   color: lightgray;
   text-align: left;
-  padding: 120px 0;
-}
-.seoInf p {
-  color: #979797;
-  padding-left: 50px;
-}
+  padding: 120px 0; }
+  .seoInf p {
+    color: #979797;
+    padding-left: 50px; }
 
 .desB {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 75px 0;
-}
-.desB button {
-  background-color: red;
-  border-radius: 5px;
-  border: none;
-  color: white;
-  padding: 10px 35px;
-  cursor: pointer;
-}
+  margin: 75px 0; }
+  .desB button {
+    background-color: red;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    padding: 10px 35px;
+    cursor: pointer; }
 
 .contactUs {
   width: 100%;
   height: 725px;
-  background-color: #363636;
-}
+  background-color: #363636; }
 
 .iconsBl {
   text-align: center;
@@ -270,264 +218,217 @@ nav h1 {
   margin: 25px 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-}
-.iconsBl i {
-  text-align: center;
-  margin: 0 20px;
-  background-color: red;
-  padding: 25px;
-  border-radius: 50%;
-  cursor: pointer;
-}
+  justify-content: center; }
+  .iconsBl i {
+    text-align: center;
+    margin: 0 20px;
+    background-color: red;
+    padding: 25px;
+    border-radius: 50%;
+    cursor: pointer; }
 
 #oneI {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
 
 #twoI {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-}
+  align-items: flex-end; }
 
 .desScr {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 35px 0;
-}
-.desScr h2 {
-  color: white;
-}
-.desScr p {
-  color: #999999;
-}
+  padding: 35px 0; }
+  .desScr h2 {
+    color: white; }
+  .desScr p {
+    color: #999999; }
 
 .fiveBlockContUs {
   display: flex;
   justify-content: center;
-  padding: 25px 0;
-}
-.fiveBlockContUs div {
-  background-color: #555555;
-  margin: 0 14px;
-  width: 200px;
-  height: 200px;
-}
+  padding: 25px 0; }
+  .fiveBlockContUs div {
+    background-color: #555555;
+    margin: 0 14px;
+    width: 200px;
+    height: 200px; }
 
 .fiveBlockInfUs {
   display: flex;
-  justify-content: center;
-}
-.fiveBlockInfUs div {
-  margin: 5px 13px;
-  width: 200px;
-  height: 50px;
-}
-.fiveBlockInfUs div p {
-  color: lightgray;
-  font-size: 17px;
-  text-align: center;
-}
+  justify-content: center; }
+  .fiveBlockInfUs div {
+    margin: 5px 13px;
+    width: 200px;
+    height: 50px; }
+    .fiveBlockInfUs div p {
+      color: lightgray;
+      font-size: 17px;
+      text-align: center; }
 
 .descOfServ {
   width: 100%;
   height: 1100px;
-  background-color: #242424;
-}
+  background-color: #242424; }
 
 .infoServ {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
-}
-.infoServ h1 {
-  color: white;
-}
-.infoServ p {
-  color: #cccccc;
-  text-align: center;
-}
-.infoServ ul {
-  color: lightgray;
-  width: 80%;
-}
+  margin-top: 50px; }
+  .infoServ h1 {
+    color: white; }
+  .infoServ p {
+    color: #cccccc;
+    text-align: center; }
+  .infoServ ul {
+    color: lightgray;
+    width: 80%; }
+
 .buttonServ {
   display: flex;
   justify-content: center;
   position: relative;
-  top: 115px;
-}
-.buttonServ div button {
-  background-color: red;
-  color: white;
-  border: none;
-  padding: 12px 40px;
-  font-size: 20px;
-  cursor: pointer;
-}
+  top: 115px; }
+  .buttonServ div button {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 12px 40px;
+    font-size: 20px;
+    cursor: pointer; }
 
 .workEx {
   display: flex;
-  justify-content: center;
-}
-.workEx div {
-  margin-top: 200px;
-}
+  justify-content: center; }
+  .workEx div {
+    margin-top: 200px; }
 
 .thereBlock {
-  padding: 50px 0;
-}
-.thereBlock div {
-  width: 350px;
-  height: 350px;
-  background-color: #555555;
-  margin: 0 15px;
-  border-radiusradius: 10px;
-}
-.thereBlock div p {
-  text-align: center;
-  color: white !important;
-  margin-top: 200px;
-  font-size: 20px;
-}
+  padding: 50px 0; }
+  .thereBlock div {
+    width: 350px;
+    height: 350px;
+    background-color: #555555;
+    margin: 0 15px;
+    border-radiusradius: 10px; }
+    .thereBlock div p {
+      text-align: center;
+      color: white !important;
+      margin-top: 200px;
+      font-size: 20px; }
 
 .buttonOuW {
   display: flex;
-  justify-content: center;
-}
-.buttonOuW div button {
-  background-color: white;
-  color: black;
-  border: 3px solid black;
-  padding: 5px 40px;
-  font-size: 20px;
-  cursor: pointer;
-}
+  justify-content: center; }
+  .buttonOuW div button {
+    background-color: white;
+    color: black;
+    border: 3px solid black;
+    padding: 5px 40px;
+    font-size: 20px;
+    cursor: pointer; }
 
 .costServ {
   width: 100%;
   height: 785px;
   background-color: #242424;
-  margin: 50px 0;
-}
+  margin: 50px 0; }
 
 .pricSch {
   display: flex;
   justify-content: center;
-  margin: 50px 0;
-}
-.pricSch div h1 {
-  color: white;
-}
-.pricSch div p {
-  color: #555555;
-}
+  margin: 50px 0; }
+  .pricSch div h1 {
+    color: white; }
+  .pricSch div p {
+    color: #555555; }
 
 .thereMainBlocks {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-}
-.thereMainBlocks #newCol {
-  background-color: #e7e7e7 !important;
-  border-radius: 25px;
-  height: 550px !important;
-  position: relative;
-  bottom: 25px;
-}
-.thereMainBlocks #newCol ul {
-  list-style-type: none;
-  text-decoration: none;
-  padding: 50px 0;
-  margin: 0 25px;
-  text-align: center;
-}
-.thereMainBlocks #newCol ul li {
-  padding: 0;
-  margin: 0;
-}
-.thereMainBlocks #newCol p {
-  background-color: #e7e7e7 !important;
-  border-radius: 25px 25px 0 0;
-  text-align: center;
-  font-size: 25px;
-}
-.thereMainBlocks #newCol h2 {
-  text-align: center;
-  border-top: 2px solid red;
-  margin: 0 25px;
-}
-.thereMainBlocks #radius {
-  border-radius: 25px 0 0 25px;
-  -moz-border-radius: 25px 0 0 25px;
-  -webkit-border-radius: 25px 0 0 25px;
-}
-.thereMainBlocks #radius ul {
-  list-style-type: none;
-  text-decoration: none;
-  padding: 50px 0;
-  margin: 0 25px;
-  text-align: center;
-}
-.thereMainBlocks #radius ul li {
-  padding: 0;
-  margin: 0;
-}
-.thereMainBlocks #radius p {
-  background-color: #e7e7e7 !important;
-  border-radius: 25px 25px 0 0;
-  -moz-border-radius: 25px 0 0 0;
-  -webkit-border-radius: 25px 0 0 0;
-  padding: 5px 35px 5px 5px;
-  text-align: center;
-  font-size: 25px;
-}
-.thereMainBlocks #radius h2 {
-  text-align: center;
-  border-top: 2px solid red;
-  margin: 0 25px;
-}
-.thereMainBlocks #radiusTwo {
-  border-radius: 0 50px 50px 0;
-}
-.thereMainBlocks #radiusTwo ul {
-  list-style-type: none;
-  text-decoration: none;
-  padding: 50px 0;
-  margin: 0 25px;
-  text-align: center;
-}
-.thereMainBlocks #radiusTwo ul li {
-  padding: 0;
-  margin: 0;
-}
-.thereMainBlocks #radiusTwo p {
-  background-color: #e7e7e7 !important;
-  border-radius: 0 25px 0 0;
-  padding: 5px 5px 5px 35px;
-  text-align: center;
-  font-size: 25px;
-}
-.thereMainBlocks #radiusTwo h2 {
-  text-align: center;
-  border-top: 2px solid red;
-  margin: 0 25px;
-}
-.thereMainBlocks div {
-  width: 300px;
-  height: 500px;
-  background-color: #e7e7e7;
-  margin: 5px 25px;
-}
+  justify-content: center; }
+  .thereMainBlocks #newCol {
+    background-color: #e7e7e7 !important;
+    border-radius: 25px;
+    height: 550px !important;
+    position: relative;
+    bottom: 25px; }
+    .thereMainBlocks #newCol ul {
+      list-style-type: none;
+      text-decoration: none;
+      padding: 50px 0;
+      margin: 0 25px;
+      text-align: center; }
+      .thereMainBlocks #newCol ul li {
+        padding: 0;
+        margin: 0; }
+    .thereMainBlocks #newCol p {
+      background-color: #e7e7e7 !important;
+      border-radius: 25px 25px 0 0;
+      text-align: center;
+      font-size: 25px; }
+    .thereMainBlocks #newCol h2 {
+      text-align: center;
+      border-top: 2px solid red;
+      margin: 0 25px; }
+  .thereMainBlocks #radius {
+    border-radius: 25px 0 0 25px;
+    -moz-border-radius: 25px 0 0 25px;
+    -webkit-border-radius: 25px 0 0 25px; }
+    .thereMainBlocks #radius ul {
+      list-style-type: none;
+      text-decoration: none;
+      padding: 50px 0;
+      margin: 0 25px;
+      text-align: center; }
+      .thereMainBlocks #radius ul li {
+        padding: 0;
+        margin: 0; }
+    .thereMainBlocks #radius p {
+      background-color: #e7e7e7 !important;
+      border-radius: 25px 25px 0 0;
+      -moz-border-radius: 25px 0 0 0;
+      -webkit-border-radius: 25px 0 0 0;
+      padding: 5px 35px 5px 5px;
+      text-align: center;
+      font-size: 25px; }
+    .thereMainBlocks #radius h2 {
+      text-align: center;
+      border-top: 2px solid red;
+      margin: 0 25px; }
+  .thereMainBlocks #radiusTwo {
+    border-radius: 0 50px 50px 0; }
+    .thereMainBlocks #radiusTwo ul {
+      list-style-type: none;
+      text-decoration: none;
+      padding: 50px 0;
+      margin: 0 25px;
+      text-align: center; }
+      .thereMainBlocks #radiusTwo ul li {
+        padding: 0;
+        margin: 0; }
+    .thereMainBlocks #radiusTwo p {
+      background-color: #e7e7e7 !important;
+      border-radius: 0 25px 0 0;
+      padding: 5px 5px 5px 35px;
+      text-align: center;
+      font-size: 25px; }
+    .thereMainBlocks #radiusTwo h2 {
+      text-align: center;
+      border-top: 2px solid red;
+      margin: 0 25px; }
+  .thereMainBlocks div {
+    width: 300px;
+    height: 500px;
+    background-color: #e7e7e7;
+    margin: 5px 25px; }
 
 .navB {
-  padding: 100px 0;
-}
+  padding: 100px 0; }
 
 /*# sourceMappingURL=services.css.map */
