--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -114,6 +114,10 @@
         /*right: 65px;*/
     }
 
+    .butInNav {
+        display: none;
+    }
+
     .buttonBlock {
         max-width: 33.333%;
     }
@@ -292,12 +296,13 @@
         margin-right: 0;
     }
     .navB p {
-        font-size: 15px !important;
+        font-size: 13px;
     }
 
     .navB h1 {
         padding-top: 40px;
         text-align: center;
+        font-size: 25px;
     }
 
     .iconsBl {
@@ -476,11 +481,17 @@
     }
 
     .creatInf h1 {
-        text-align: center;
+        text-align: left;
+        font-size: 20px;
+    }
+
+    .creatInf p {
+        text-align: left;
+        padding-left: 0 !important;
     }
 
     .creatS {
-        height: auto !important;
+        height: 700px;
     }
 
     .seoW {
@@ -504,6 +515,10 @@
         margin: 5px 0;
     }
 
+    .firstB div p {
+        margin-top: 0;
+    }
+
     .creatF a p {
         font-size: 30px !important;
     }
@@ -513,7 +528,7 @@
     }
 
     .seoW {
-        padding-top: 450px;
+        /*padding-top: 450px;*/
     }
 
     .seoInf p {
@@ -521,7 +536,7 @@
     }
 
     .designW {
-        padding-top: 250px;
+        padding-bottom: 100px;
     }
 
     .desB {
@@ -593,7 +608,9 @@
         padding: 0;
     }
 
-
+    .butInNav {
+        display: none;
+    }
 
     .octH {
         margin-top: 40px;
@@ -817,7 +834,7 @@
         margin-right: 0;
     }
     .navB p {
-        font-size: 15px !important;
+        font-size: 15px;
     }
 
     .navB h1 {
@@ -938,11 +955,11 @@
     }
 
     .creatInf h1 {
-        text-align: center;
+        text-align: left;
     }
 
     .creatS {
-        height: auto !important;
+        height: auto;
     }
 
     .seoW {
@@ -976,7 +993,7 @@
     }
 
     .seoW {
-        padding-top: 450px;
+        /*padding-top: 450px;*/
     }
 
     .seoInf p {
@@ -984,7 +1001,7 @@
     }
 
     .designW {
-        padding-top: 250px;
+        padding-bottom: 100px;
     }
 
     .desB {
@@ -1078,6 +1095,9 @@
         margin-top: 180px;
     }
 
+    .butInNav {
+        display: none;
+    }
 
     .pointers img {
         margin-top: 80px !important;
@@ -1272,7 +1292,7 @@
         margin-right: 0;
     }
     .navB p {
-        font-size: 15px !important;
+        font-size: 15px;
     }
 
     .navB h1 {
@@ -1399,11 +1419,11 @@
     }
 
     .creatInf h1 {
-        text-align: center;
+        text-align: left;
     }
 
     .creatS {
-        height: auto !important;
+        height: 750px !important;
     }
 
     .seoW {
@@ -1429,7 +1449,7 @@
     }
 
     .creatF a p {
-        font-size: 30px !important;
+        font-size: 26px !important;
     }
 
     .oneB {
@@ -1437,7 +1457,7 @@
     }
 
     .seoW {
-        padding-top: 450px;
+        /*padding-top: 450px;*/
     }
 
     .seoInf p {
@@ -1445,7 +1465,7 @@
     }
 
     .designW {
-        padding-top: 250px;
+        padding-bottom: 100px;
     }
 
     .desB {
@@ -1747,7 +1767,7 @@
         margin-right: 0;
     }
     .navB p {
-        font-size: 15px !important;
+        font-size: 15px;
     }
 
     .navB h1 {
@@ -1862,11 +1882,11 @@
     }
 
     .creatInf h1 {
-        text-align: center;
+        text-align: left;
     }
 
     .creatS {
-        height: auto !important;
+        height: auto;
     }
 
     .seoW {
@@ -2178,7 +2198,7 @@
         margin-right: 0;
     }
     .navB p {
-        font-size: 15px !important;
+        font-size: 15px;
     }
 
     .navB h1 {
@@ -2291,11 +2311,11 @@
     }
 
     .creatInf h1 {
-        text-align: center;
+        text-align: left;
     }
 
     .creatS {
-        height: auto !important;
+        height: auto;
     }
 
     .seoW {
@@ -2377,6 +2397,10 @@
 
     .twoS {
         display: none !important;
+    }
+
+    #radius, #newCol, #radiusTwo h1 {
+        text-align: center;
     }
 
 
