--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -13,7 +13,8 @@
         <div class="containerMenu">
             <div class="header">
                 <div>
-                    <img src="/public/img/newLogoWhiteColor.svg" alt="LogoOcto" width="65px" height="auto">
+                    <object type="image/svg+xml" data="/img/newLogoWhiteColor.svg" id="object" class="icon" width="45px" height="auto"></object>
+                    {#<img src="/public/img/newLogoWhiteColor.svg" alt="LogoOcto" width="65px" height="auto">#}
                     <p>Web-Studio<br><b>OctoWice</b></p>
                 </div>
                 <input class="nav-burger__checkbox" type="checkbox" id="burger">
