--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -39,7 +39,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12 pointers">
-                        <img src="/img/pointersNew.png" alt="pointers">
+                        <img id="down" src="/img/pointersNew.png" alt="pointers">
                     </div>
                 </div>
             </div>
