--- a/public/style/style.css
+++ b/public/style/style.css
@@ -35,7 +35,10 @@ body {
       body .headerB li #bacRed {
         background-color: red;
         color: white;
-        padding: 7px 5px; }
+        padding: 7px 7px; }
+      body .headerB li #bacRed:hover{
+        background-color: #e74c3c;
+      }
 
 #imgInHL {
   padding: 0 15px;
@@ -58,9 +61,9 @@ body {
   z-index: 0;
   height: auto;
   position: absolute;
-  top: -1px; }
+  top: -0.1%; }
   .imgR img {
-    max-width: 89.3%;
+    max-width: 95.6%;
     height: auto;
     float: right; }
 
@@ -105,6 +108,21 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 270px; }
+
+#down {
+  -webkit-animation: downUp 2s infinite alternate;
+  -o-animation: downUp 2s infinite alternate;
+  animation: downUp 2s infinite alternate;
+
+}
+
+@keyframes downUp {
+  from {
+  }
+  to {
+    transform: translateY(-20px);
+  }
+}
 
 .OneSec {
   width: 100%;
