--- a/templates/pages/blogPage.html.twig
+++ b/templates/pages/blogPage.html.twig
@@ -30,7 +30,7 @@
                     <div class="infOneObj">
                         <h1>{{ article.title }}</h1>
                         <p>{{ article.description|raw }}<p>
-                    </div>imge
+                    </div>
                     <div class="col-lg-12 col-md-12 infTwoObj">
                         <p><i id="clockInBlog" class="far fa-clock"></i>{{ article.CreatedAt|date('Y/m/d') }}</p>
                         <p><a href="{{ path('article',{'slug':article.slug}) }}">Подробнее</a> </p>
