Fix post header block

--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -1997,7 +1997,9 @@
         padding: 0 10px;
     }
 
-
+    .imgBlock{
+        display: none
+    }
 
     .infOneObj h1 {
         font-size: 17px;
@@ -2019,7 +2021,7 @@
     #object {
         position: relative;
         bottom: 9px;
-    }
+    }octoWrap
 
     .headerB ul li {
         font-size: 15px;
@@ -2454,34 +2456,21 @@
 
 
 @media only screen and (min-width: 1440px) and (max-width: 1920px)  {
-
-
     .adptiveMenu {
         display: none;
     }
-
 }
-
-
 
 @media only screen and (min-width: 1920px) and (max-height: 1080px) {
     .imgR img {
         max-width: 95.6%;
     }
-
     .buttonInInfBlock a {
         margin-top: 0;
     }
-
-    /*.ThereSec {*/
-        /*height: auto;*/
-        /*padding-bottom: 75px;*/
-    /*}*/
-
     .firstButton {
         padding: 15px 25px 0 25px;
     }
-
     .descOfServ {
         height: auto;
         padding-bottom: 200px;
@@ -2491,22 +2480,19 @@
         padding: 0;
         margin: 0;
     }
-
     .adptiveMenu {
         display: none;
     }
-
     .buttonInInfBlock {
         margin-top: 0;
     }
-
     .ThereSec {
         padding-bottom: 410px !important;
     }
-
 }
 
 @media only screen and (min-width: 1920px) and (max-width: 10000px) {
+
     .adptiveMenu {
         display: none;
     }
