--- a/public/style/style.css
+++ b/public/style/style.css
@@ -40,6 +40,16 @@ body {
         background-color: #e74c3c;
       }
 
+#octoImg{
+  height: 115%;
+  top: -15%;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+#mainUp{
+  position:relative;
+}
 #imgInHL {
   padding: 0 15px;
   width: 100px;
@@ -69,15 +79,29 @@ body {
 
 .octH {
   z-index: 100;
+  border-radius: 3px;
   margin-top: 100px; }
   .octH h1 {
     font-size: 50px;
     font-weight: 300;
-    text-align: left; }
+    text-align: left;
+    display:inline;
+    -webkit-box-shadow: 0 0 10px 5px rgba(255,255,255,0.7);
+    -moz-box-shadow: 0 0 10px 5px rgba(255,255,255,0.7);
+    box-shadow: 0 0 10px 5px rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.7);
+  }
   .octH p {
-    color: #999999;
+    color: #747474;
     margin-left: 60px;
     text-align: left; }
+  .octH p span{
+    display:inline;
+    background-color:rgba(255,255,255,0.7);
+    -webkit-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
+    -moz-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
+    box-shadow: 0 0 4px 2px rgba(255,255,255,0.7);
+  }
 
 .infoO {
   z-index: 100; }
@@ -88,6 +112,7 @@ body {
   color: black;
   display: flex;
   align-items: center;
+  background-color: #FFFFFF;
   justify-content: center;
   margin-top: 100px;
   border: solid 1px black;
@@ -96,7 +121,12 @@ body {
   .BuCen p {
     padding: 10px;
     margin: 0; }
-
+.BuCen:hover{
+  background-color: rgba(201, 201, 201, 0.75);
+}
+.BuCen:hover p{
+  color: #ffffff;
+}
 .Post {
   display: flex;
   justify-content: center; }
@@ -110,9 +140,14 @@ body {
   margin-top: 270px; }
 
 #down {
+  margin-bottom: 20px;
   -webkit-animation: downUp 2s infinite alternate;
   -o-animation: downUp 2s infinite alternate;
   animation: downUp 2s infinite alternate;
+  background-color:rgba(255,255,255,0.7);
+  -webkit-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
+  -moz-box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
+  box-shadow: 0 0 4px 4px rgba(255,255,255,0.7);
 
 }
 
@@ -129,7 +164,7 @@ body {
   height: 1350px;
   background-color: #363636;
   z-index: 100;
-  margin-top: 43px; }
+}
 
 .LineP {
   display: flex;
