--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -3,40 +3,26 @@
 {% block title %}Home{% endblock %}
 {% block body %}
     <nav>
-        <section class="imgS">
-            <div class="imgR">
-                <img id="imgInMedia" src="/img/octopus.jpg" alt="octopus" />
-            </div>
-        </section>
-
-        <section>
+        <section id="mainUp">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 octH">
-                        <h1>OctoWice – Закажи сайт у культурных профессионалов!</h1>
+                        <h1>OctoWice – Закажи сайт у культурных <br> профессионалов!</h1>
                         <p>
-                            Сайты помогут – построить имидж, увеличить продажи,<br> привлечь новых клиентов.
+                            <span >Сайты помогут – построить имидж, увеличить продажи,<br> привлечь новых клиентов.</span>
                         </p>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <section>
-            <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-
-
-                        <a id="noBorder" href="{{ path('aboutUs') }}" class="Post">
-                            <div class="BuCen">
+                        <div class="Post">
+                            <a id="noBorder" href="{{ path('blog') }}" class="BuCen">
                                 <p>Узнать о нас? </p>
-                            </div>
-                        </a>
-
+                            </a>
                         </div>
-                    </div>
 
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 pointers">
                         <img id="down" src="/img/pointersNew.png" alt="pointers">
@@ -44,15 +30,9 @@
                 </div>
             </div>
 
-                </div>
-
+            <img id="octoImg" src="/img/octopus.jpg" alt="octopus" />
         </section>
-
-
-
     </nav>
-
-
     <main>
 
 
